syntax = "proto3";

package x.proxy;
option go_package = "github.com/5vnetwork/vx-core/app/configs/proxy";

// Config for HTTP proxy server.
message HttpServerConfig {
}

// ClientConfig is the protobuf config for HTTP proxy client.
message HttpClientConfig { 
    bool h1_skip_wait_for_reply = 2; 
    Account account = 1;
}

message Account {
      string username = 1;
  string password = 2;
}